--- a/style.css
+++ b/style.css
@@ -53,3 +53,21 @@ body {
 		transform: rotateY(360deg);
 	}
 }
+
+h1{
+	text-align: center;
+	padding: 100px;
+	color: white;
+}
+h3{
+	text-align: center;
+	padding: 10px;
+	color: white;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, 5px;
+	line-height: 50px;
+}
+img{
+	width: 100px;
+	height: 100px;
+	border-radius:50px;
+}
